[package]
name = "wav_concat"
repository = "https://github.com/Frittierapparat/wav-concat"
version = "1.0.0"
edition = "2021"
keywords = ["audio", "codec", "wav", "wave", "concat"]
categories = ["audio"]

[lib]
name="wav_concat"
path="/src/main.rs/"
crate-type= ["lib"]

[dependencies]
clap = "4.3.12"
