[package]
name="wav_concat"
repository = "https://github.com/Frittierapparat/wav_concat"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Allows for concatenating and verifying wav files."
keywords = ["audio", "codec", "wav", "wave", "concat"]
categories = ["audio"]

[lib]
name="wav_concat"
path="src/lib.rs"
crate-type= ["rlib"]

